fix: Adjust body and HTML overflow properties for improved scrolling and update InfiniteCards component width to full.

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,7 @@
     color: rgb(255, 255, 255);
     background: #6d4d9c;
   }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
@@ -85,6 +86,10 @@
     @apply border-border !scroll-smooth;
   }
 
+  html {
+    overflow-x: hidden;
+  }
+
   body {
     font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
     @apply bg-background text-foreground overflow-hidden pointer-events-none;
@@ -107,6 +112,7 @@
   .bg-gradient-130 {
     background: linear-gradient(127deg, #04071d 0%, #0c0e23 100%);
   }
+
   .bg-gradient-90 {
     background: linear-gradient(90deg, #04071d 0%, #0c0e23 100%);
   }
